实现了 订阅者-发布者 模式。

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <h1>{{song}}</h1>
-        <p><<{{album.name}}>>是{{single}}发行的专辑</p>
+        <p><<{{album.name}}>>是{{singer}}发行的专辑</p>
         <p>主打歌为{{album.theme}}</p>
         <p>作词人为{{singer}}等人</p>
         为你弹奏肖邦的{{album.theme}}
