--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <p>主打歌为{{album.theme}}</p>
         <p>作词人为{{singer}}等人</p>
         为你弹奏肖邦的{{album.theme}}
+        <input type="text" v-model="search.a.b">
     </div>
 
-    <!-- <script src="mvvm.js"></script> -->
-    <script src="myMvvm.js"></script>
+    <script src="mvvm.js"></script>
+    <!-- <script src="myMvvm.js"></script> -->
     <script>
         let mvvm = new Mvvm({
             el : '#app',
@@ -27,6 +28,11 @@
                     theme: '夜曲',
                 },
                 singer: '周杰伦',
+                search: {
+                    a:{
+                        b: 123
+                    }
+                }
             }
         })
     </script>
